# owl2yarrrml

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml  translate.py
.github/workflows/: pypi-publish.yml
resources/: template.yaml
src/owl2yarrrml/: __init__.py  __main__.py  constants.py  translate.py
